# proj_setup_python

./: Makefile  README.md  example.py  proj_Makefile  proj_README.md  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: main.yaml
src/python_proj/: __init__.py  main.py
tests/: __init__.py  test_main.py  test_start.py
