[metadata]
name = python_proj
description = Python proj setup package
version = 0.0.1
author = Stanislav Sabev
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers = 
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3 :: 3.10
    Programming Language :: Python :: 3 :: 3.11

[options]
packages =
    python_proj
install_requires = 
    black>=22.12.0
python_requires = >=3.10.0
package_dir =
    =src
zip_safe = False

[options.extras_require]
testing = 
    pytest>=7.2.0
    pytest-cov>=4.0.0
    mock>=5.0.0
    autopep8>=2.0.0
    mypy>=0.991
    flake8>=6.0.0
    tox>=4.4.0
    black>=22.12.0

[options.package_data]
python_proj = py.typed

[flake8]
exclude =
    __pycache__,
    venv,
ignore = E203
max-line-length = 99
count = true
max-complexity = 10
